Update Dockerfile entrypoint for JVM options and specify image version in deployment